add user page and logout function

--- a/src/static/icofont/demo.html
+++ b/src/static/icofont/demo.html
@@ -116,6 +116,42 @@
 			</div>
 		</li>
 		
+		<li>
+			<div class="icon-holder">
+				<div class="icon"> 
+					<i class="icofont-card"></i>
+				</div> 
+				<span> card </span>
+			</div>
+		</li>
+		
+		<li>
+			<div class="icon-holder">
+				<div class="icon"> 
+					<i class="icofont-vehicle-delivery-van"></i>
+				</div> 
+				<span> vehicle-delivery-van </span>
+			</div>
+		</li>
+		
+		<li>
+			<div class="icon-holder">
+				<div class="icon"> 
+					<i class="icofont-package"></i>
+				</div> 
+				<span> package </span>
+			</div>
+		</li>
+		
+		<li>
+			<div class="icon-holder">
+				<div class="icon"> 
+					<i class="icofont-ui-rate-blank"></i>
+				</div> 
+				<span> ui-rate-blank </span>
+			</div>
+		</li>
+		
 		</ul>
 	</div>	
 	</body>
