--- a/src/static/icofont/demo.html
+++ b/src/static/icofont/demo.html
@@ -152,6 +152,15 @@
 			</div>
 		</li>
 		
+		<li>
+			<div class="icon-holder">
+				<div class="icon"> 
+					<i class="icofont-ui-search"></i>
+				</div> 
+				<span> ui-search </span>
+			</div>
+		</li>
+		
 		</ul>
 	</div>	
 	</body>
