add confirm bill page

--- a/src/static/icofont/demo.html
+++ b/src/static/icofont/demo.html
@@ -161,6 +161,15 @@
 			</div>
 		</li>
 		
+		<li>
+			<div class="icon-holder">
+				<div class="icon"> 
+					<i class="icofont-google-map"></i>
+				</div> 
+				<span> google-map </span>
+			</div>
+		</li>
+		
 		</ul>
 	</div>	
 	</body>
